@@ -8,6 +8,7 @@
 6. Tidy up artist title strings if navigating through multiple roles.
 7. If browsing non basic artist roles then show role name before years in
    subtoolbar when listing an artist's albums.
+8. 'Pulse' play button if waiting-to-play.
 
 5.3.2
 -----
